PIMP: refactor faltantes

--- a/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
@@ -169,7 +169,7 @@
         <div class="row">
             <div class="col-lg-12">
                 @select(
-                    postForm("woman"),
+                    postForm("theme"),
                     options = options(models.content.themes.Theme.options),
                     'class -> "form-control"
                 )
