PIMP: rename a Memepedia

--- a/Memepedia/Pimp/pimp/app/views/index.scala.html
+++ b/Memepedia/Pimp/pimp/app/views/index.scala.html
@@ -1,13 +1,13 @@
 @(message: String)
 
 
-@main("A GataDo Dia") {
+@main("Memepedia") {
 
 	<div class="bs-docs-section">
 		
 	    <div class="row">		    	
 	    	<div class="col-lg-12">
-				<h2>A GataDo Dia</h2>
+				<h2>Memepedia</h2>
 			</div>
 	    </div>
 
