--- a/Memepedia/Pimp/pimp/app/views/summary.scala.html
+++ b/Memepedia/Pimp/pimp/app/views/summary.scala.html
@@ -67,7 +67,7 @@
 }
 
 
-@main("A Gata Do Dia - Post") {
+@main("Memepedia") {
 
 	<div class="jumbotron">
 		
@@ -163,7 +163,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Gata</h2>
+                <h2>Theme</h2>
             </div>
         </div>
         <div class="row">
