--- a/FutbolBrasil/web/app/views/account/signup/email/verify_email_es.scala.html
+++ b/FutbolBrasil/web/app/views/account/signup/email/verify_email_es.scala.html
@@ -3,12 +3,12 @@ Hola @name,
 <br />
 <br />
 <p>
-	Se acaba de apuntar a PlayAuthenticate.<br />
+	Se acaba de apuntar a Futbol Brasil.<br />
 	<br />
 	Siga el siguiente enlace para <a href="@verificationUrl">activar su cuenta</a>.
 </p>
 <br />
 <p>
 	Saludos,<br /> 
-	<i>El equipo de PlayAuthenticate</i>
+	<i>El equipo de Hecticus</i>
 </p>
