FOOTBALLMANAGER: Missing rename

--- a/FutbolBrasil/FootballManager/app/views/account/signup/email/verify_email_es.scala.html
+++ b/FutbolBrasil/FootballManager/app/views/account/signup/email/verify_email_es.scala.html
@@ -3,7 +3,7 @@ Hola @name,
 <br />
 <br />
 <p>
-	Se acaba de apuntar a PMC.<br />
+	Se acaba de apuntar a Football Manager.<br />
 	<br />
 	Siga el siguiente enlace para <a href="@verificationUrl">activar su cuenta</a>.
 </p>
