--- a/Memepedia/Memepedia/Memepedia/platforms/android/res/xml/config.xml
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/res/xml/config.xml
@@ -67,4 +67,7 @@
     <feature name="StatusBar">
         <param name="android-package" onload="true" value="org.apache.cordova.statusbar.StatusBar" />
     </feature>
+    <feature name="CordovaHttpPlugin">
+        <param name="android-package" value="com.synconset.CordovaHttpPlugin" />
+    </feature>
 </widget>
