--- a/Memepedia/Memepedia/Memepedia/platforms/android/res/xml/config.xml
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/res/xml/config.xml
@@ -30,9 +30,9 @@
     <preference name="android-minSdkVersion" value="8" />
     <preference name="android-installLocation" value="auto" />
     <preference name="load-url-timeout" value="100000" />
-    <name>Memepedia</name>
+    <name>Memeteca</name>
     <description>
-        Memepedia app.
+        Memeteca app.
     </description>
     <author email="contact@hecticus.com" href="http://www.hecticus.com">
         Hecticus Software Inc
@@ -67,4 +67,7 @@
     <feature name="StatusBar">
         <param name="android-package" onload="true" value="org.apache.cordova.statusbar.StatusBar" />
     </feature>
+    
+    <preference name="SplashScreen" value="screen" />
+	<preference name="SplashScreenDelay" value="5000" />
 </widget>
