--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -177,11 +177,11 @@ row:not(input):not(textarea) {
 	
 	
 	div.header {
-		position: absolute; 
+		/*position: absolute; 
 		z-index: 4;
 		top: 0;
 		left:0;
-		right:0;		
+		right:0;*/		
 		width: 100%; 
 		height: 35px;
 		line-height: 35px;		
