--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -168,20 +168,22 @@ row:not(input):not(textarea) {
 		text-align: center;
 		color: #ffffff;
 		background: #3B5CA9;
+		margin: 0 !important;
 	}
 	
 	table tbody tr td {
 		text-align: center;
 		font-size: 0.8em;
+		margin: 0 !important; 
 	}
 	
 	
 	div.header {
-		/*position: absolute; 
+		position: absolute; 
 		z-index: 4;
 		top: 0;
 		left:0;
-		right:0;*/		
+		right:0;		
 		width: 100%; 
 		height: 35px;
 		line-height: 35px;		
