--- a/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/css/index.css
+++ b/Memepedia/Memepedia/Memepedia/platforms/android/assets/www/css/index.css
@@ -47,6 +47,19 @@ body {
     width:100%;
 }
 
+::-webkit-input-placeholder {
+   color: black;
+}
+:-moz-placeholder { /* Firefox 18- */
+   color: black;  
+}
+::-moz-placeholder {  /* Firefox 19+ */
+   color: black;  
+}
+:-ms-input-placeholder {  
+   color: black;  
+}
+
 /* Portrait layout (default) */
 .app {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
