--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -23,8 +23,6 @@ row:not(input):not(textarea) {
 		width: 100%;
 	}
 
-	
-
 
 	#wrapper2, 
 	#wrapper3 {	
@@ -211,16 +209,6 @@ row:not(input):not(textarea) {
 	}
 	
 	
-	div.headerM {
-		width: 100%; 
-		height: 35px;
-		line-height: 35px;		
-		background-color: #3B9444;			
-		padding: 0 !important; 
-		margin:0 !important;		
-		border: 0;
-		color:#ffffff;
-	}
 	
 	div.header {
 		position: absolute; 
@@ -295,7 +283,7 @@ row:not(input):not(textarea) {
 	bottom: 50px;
 	left: 0;
 	width: 100%;
-	background: #ccc;
+	background:  #FFFFFF;
 	overflow: hidden;
 }
 
@@ -303,9 +291,8 @@ row:not(input):not(textarea) {
 	position: absolute;
 	z-index: 1;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	
 	height: 100%;
-	background-color: #a00;
+	background-color: #FFFFFF;
 	-webkit-transform: translateZ(0);
 	-moz-transform: translateZ(0);
 	-ms-transform: translateZ(0);
@@ -338,8 +325,7 @@ row:not(input):not(textarea) {
 	float: left;
 	height: 100%;
 	border-right: 1px solid #ccc;
-	background-color: #fafafa;
-	font-size: 14px;
+	background-color: #FFFFFF;
 }
 
 
@@ -367,8 +353,8 @@ row:not(input):not(textarea) {
 	.wrapper {
 		position: absolute;
 		z-index: 1;
-		top: 35px; 
-		bottom: 100px; 
+		top:  36px; 
+		bottom: 0; 
 		left: 0; 
 		width: 100%;
 	}
@@ -376,8 +362,7 @@ row:not(input):not(textarea) {
 	.wrapper,
 	.wrapper .scroller,
 	.wrapper .scroller .container,    			
-	.wrapper .scroller .container .row,
-	.wrapper .scroller .container .row div { 
+	.wrapper .scroller .container div { 
 		padding: 0 !important; 
 		margin: 0 !important; 
 		background-color: #ffffff;
@@ -385,9 +370,13 @@ row:not(input):not(textarea) {
 
 
 
-
-
-
+	.date { font-weight: bold; font-size: 2em; }
+	.winner { font-weight: bold; }
+	.goal { font-size: 1.6em; }
+	.status { color:#000000; font-weight: bold; }
+	.status.encerrado { color:red; }
+	.status.default { color:#FFBF00; }
+	.status.else { color:green; }
 
 
 
