--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -31,10 +31,10 @@
             <div class="container" >
                 <div class="row" style="margin-top: 32px !important;" >
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 news"  >
-                        <h3 class="title" ng-model="contentNews.title"></h3>
+                        <h3 class="title">{{contentNews.title}}</h3>
                         <i class="icon mdi-device-access-time"></i>
                         <span class="moment">{{fromNow(contentNews.publicationDate)}}</span>
-                        <p class="body" ng-model="contentNews.body"></p>
+                        <p class="body">{{contentNews.body}}</p>
                     </div>
                 </div>
             </div>
