--- a/FutbolBrasil/futbol-brasil/app/css/iconvault-preview.css
+++ b/FutbolBrasil/futbol-brasil/app/css/iconvault-preview.css
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "iconvault";
-  src: url("./fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.eot");
-  src: url("./fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.eot?#iefix") format("embedded-opentype"),
-       url("./fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.woff") format("woff"),
-       url("./fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.ttf") format("truetype"),
-       url("./fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.svg#iconvault") format("svg");
+  src: url("../fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.eot");
+  src: url("../fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.woff") format("woff"),
+       url("../fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.ttf") format("truetype"),
+       url("../fonts/iconvault_6682d2be5fff38c88f6a23b7a62528d9.svg#iconvault") format("svg");
   font-weight: normal;
   font-style: normal;
 }
