FOOTBALL_BRASIL: Version de Angular casi al mismo nivel de funcionalidad que la original al momento de empezar el port

--- a/FutbolBrasil/futbol-brasil/app/css/default.css
+++ b/FutbolBrasil/futbol-brasil/app/css/default.css
@@ -153,7 +153,9 @@ row:not(input):not(textarea) {
 	body.content-scorers .competition,
 	body.content-standings .competition  {
 		text-transform:uppercase;
-		display:none;
+		/*TODO revisar*/
+        /*display:none;*/
+
 	}
 
 	body.content-match .competition.active,
