--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div id="wrapperH">
-        <div id="scroller" ng-style="width:{{widthTotal}}px;">
+        <div id="scroller" ng-style="getTotalWidth()">
             <ul>
-                <li ng-style="width:{{width}}px;" ng-repeat="league in _this.item.leagues" >
+                <li ng-style="getWidth()" ng-repeat="league in _this.item.leagues" >
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                             <table class="table">
