--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -1,10 +1,73 @@
+
 <div id="wrapperH">
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
-            <li ng-style="getWidth()" ng-repeat="page in _this.pages" on-last-repeat>
-                <span>{{page.name}}</span>
-                <span>{{page.date}}</span>
+            <li ng-style="getWidth()" ng-repeat="page in pages" on-last-repeat >
+
+                <div class="container">
+
+                    <div class="row header">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+                            <h4 ng-bind="page.name" class="caption"></h4>
+                        </div>
+                    </div>
+
+                    <div class="row" >
+
+                        <div id="{{wrapper.getName($index)}}" class="wrapper" >
+                            <div class="scroller" >
+                                <div class="container">
+
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+                                        <table class="table" ng-repeat="league in page.matches.leagues">
+                                            <thead>
+                                            <tr>
+                                                <th colspan="3">
+                                                    <span ng-bind="league.name"></span>
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+
+                                            <tr ng-repeat="match in league.fixtures" data-match="{{ match.id_game_matches }}">
+
+                                                <td style="width: 33% !important;" ng-class="{winner: match.home_team_goals >= match.away_team_goals}">
+                                                    <span ng-bind="match.homeTeam.name"></span>
+                                                    <br />
+                                                    <span ng-bind="match.home_team_goals" class="goal"></span>
+                                                </td>
+
+                                                <td style="width: 33% !important;">
+                                                    <span ng-bind="getTime(match.date)" class="date"></span>
+                                                    <br />
+										  					<span class="status"
+                                                                  ng-class="getMatchStatusClass(match)">{{match.status.name}}
+										  					</span>
+                                                </td>
+
+                                                <td style="width: 33% !important;" ng-class="{winner: match.away_team_goals >= match.home_team_goals}">
+                                                    <span ng-bind="match.awayTeam.name"></span>
+                                                    <br />
+                                                    <span ng-bind="match.away_team_goals" class="goal"></span>
+                                                </td>
+
+                                            </tr>
+
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+
+                                </div>	<!--container-->
+                            </div>	<!--scroller-->
+                        </div> <!--wrapper-->
+                    </div> <!--row-->
+                </div> <!--container-->
+
             </li>
         </ul>
     </div>
 </div>
+
+	
