FUTBOL BRASIL: Se actualiza cambios en mtm, news and match que se realizaron el viernes en el vieja versión.

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -41,9 +41,8 @@
                                                 <td style="width: 33% !important;">
                                                     <span ng-bind="getTime(match.date)" class="date"></span>
                                                     <br />
-										  					<span class="status"
-                                                                  ng-class="getMatchStatusClass(match)">{{match.status.name}}
-										  					</span>
+                                                    <span ng-bind="match.status.name"  class="status _{{match.status.id_status}}">
+                                                    </span>
                                                 </td>
 
                                                 <td style="width: 33% !important;" ng-class="{winner: match.away_team_goals >= match.home_team_goals}">
@@ -70,4 +69,3 @@
     </div>
 </div>
 
-	
