--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -1,148 +1,145 @@
 <div id="wrapper">
 
-    <div class="scroller">
-        <div class="container">
+  <div class="scroller">
+    <div class="container" >
 
-            <div class="row" style="height: 35px; line-height: 35px; margin-bottom: 1px !important;">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <span>&nbsp;</span>
-                </div>
-            </div>
+      <div class="row" style="height: 35px; line-height: 35px; margin-bottom: 1px !important;" >
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <span>&nbsp;</span>
+        </div>
+      </div>
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="row" >
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                    <table class="table" ng-repeat="league in item.leagues">
+          <table class="table" ng-repeat="league in item.leagues">
 
-                        <thead>
-                        <tr>
-                            <th colspan="3">
-                                <span>{{league.name}}</span>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
+            <thead>
+            <tr>
+              <th colspan="3">
+                <span ng-bind="league.name"></span>
+              </th>
+            </tr>
+            </thead>
+            <tbody>
 
-                        <tr ng-repeat="match in league.fixtures"
-                            ng-click="showContentEvents(league, match)">
+            <tr ng-repeat="match in league.fixtures"  ng-click="showContentEvents(league, match)">
 
-                            <td style="width: 33% !important;"
-                                ng-class="{winner: hasHomeWinnerClass(match)}">
-                                <span>{{match.homeTeam.name}}</span>
-                                <br/>
-                                <span class="goal">{{match.home_team_goals}}</span>
-                            </td>
+              <td style="width: 33% !important;" ng-class="{winner: match.home_team_goals >= match.away_team_goals}">
+                <span ng-bind="match.homeTeam.name"></span>
+                <br />
+                <span ng-bind="match.home_team_goals" class="goal"></span>
+              </td>
 
-                            <td style="width: 33% !important;">
-                                <span class="date">{{getTime(match.date)}}</span>
-                                <br/>
-                                <span class="status"
-                                      ng-class="getMatchStatusClass(match)">{{match.status.name}}</span>
-                            </td>
+              <td style="width: 33% !important;">
+                <span ng-bind="getTime(match.date)" class="date"></span>
+                <br />
+					  					<span ng-bind="match.status.name" class="status _{{match.status.id_status}}" >
+					  					</span>
+              </td>
 
-                            <td style="width: 33% !important;"
-                                ng-class="{winner: hasAwayWinnerClass(match)}">
-                                <span>{{match.awayTeam.name}}</span>
-                                <br/>
-                                <span class="goal">{{match.away_team_goals}}</span>
-                            </td>
-                        </tr>
+              <td style="width: 33% !important;" ng-class="{winner: match.away_team_goals >= match.home_team_goals}">
+                <span ng-bind="match.awayTeam.name"></span>
+                <br />
+                <span ng-bind="match.away_team_goals" class="goal"></span>
+              </td>
 
-                        </tbody>
-                    </table>
+            </tr>
 
+            </tbody>
+          </table>
 
-                </div>
-
-            </div>
 
         </div>
-    </div>
 
-    <div class="container">
-        <div class="row header">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h4 class="caption">{{_this.date}}</h4>
-            </div>
-        </div>
+      </div>
+
     </div>
+  </div>
+
+  <div class="container" >
+    <div class="row header">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+        <h4 class="caption">{{date}}</h4>
+      </div>
+    </div>
+  </div>
 
 </div>
 
 
-<div id="wrapper2" class="page" style="left: 100%; z-index: 2;">
-    <div class="scroller">
-        <div class="container">
+<div id="wrapper2" class="page" style="left: 100%;" >
+  <div class="scroller">
+    <div class="container" >
 
-            <div class="row" style="height: 200px; line-height: 35px; margin-bottom: 1px !important;">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <span>&nbsp;</span>
-                </div>
-            </div>
+      <div class="row" style="height: 200px; margin-bottom: 1px !important;" >
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <span>&nbsp;</span>
+        </div>
+      </div>
 
-            <div class="row">
+      <div class="row" >
 
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <table class="table" ng-repeat="action in item.mtm.actions">
-                        <thead>
-                        <tr>
-                            <th colspan="2" class="status"
-                                ng-class="getPeriodClass(action.period)">
-                                <span ng-bind="action.period.name"></span>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="event in action.events">
-                            <td style="width: 20% !important;">
-                                <span style="font-weight: bold; font-size: 1.4em;">
-                                    {{event.action_minute}}'
-                                </span>
-                            </td>
-                            <td style="width: 80% !important; text-align: left;">
-                                <p>{{event.player_a}}, {{event.action.description}}</p>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <table class="table" ng-repeat="action in item.mtm.actions"  >
+            <thead>
+            <tr>
+              <th colspan="2"  class="status {{action.period.short_name}}">
+                <span ng-bind="action.period.name"></span>
+              </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="event in action.events"  >
+              <td style="width: 20% !important;" >
+                <span style="font-weight: bold; font-size: 1.6em;">{{event.action_minute}}'</span>
+              </td>
+              <td style="width: 80% !important; text-align: left; ">
+                <p style="font-size: 1.6em;"><b>{{event.player_a}}</b> de {{event.teams}},  {{event.action.description}}</p>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+
 
         </div>
-    </div>
+      </div>
 
-    <div class="row-back">
-        <div class="row" style="margin-top: 10px !important;">
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-click="prevPage()">
-                <i class="icon mdi-hardware-keyboard-arrow-left"
-                   style="font-size: 1.8em; margin-left: 10px; color: #ffffff !important;"></i>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;"
-                 ng-click="refreshEvents()">
-                <i class="icon mdi-navigation-refresh"
-                   style="font-size: 1.8em; margin-right: 10px; color: #ffffff !important;"></i>
-            </div>
-        </div>
     </div>
+  </div>
 
-    <div class="row-scoreboard">
-        <div class="row" style="text-align: center;">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <span style="font-size: 1.2em;">{{item.league.name}}</span>
-            </div>
-
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"
-                 ng-class="{winner:hasHomeWinnerClass(item.match)}">
-                <span style="font-size: 1.4em;">{{item.match.home.name}}</span>
-                <br/>
-                <span class="goal">{{item.match.home.goals}}</span>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"
-                 ng-class="{winner:hasAwayWinnerClass(item.match)}">
-                <span style="font-size: 1.4em;">{{item.match.away.name}}</span>
-                <br/>
-                <span class="goal">{{item.match.away.goals}}</span>
-            </div>
-        </div>
+  <div class="row-back">
+    <div class="row" style="margin-top: 10px !important;">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"  ng-click="prevPageMtM()">
+        <i class="icon mdi-hardware-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px; color: #ffffff !important;"></i>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;"  ng-click="refreshEvents()">
+        <i class="icon mdi-navigation-refresh" style="font-size: 1.8em; margin-right: 10px; color: #ffffff !important;" ></i>
+      </div>
     </div>
+  </div>
+
+  <div class="row-scoreboard">
+    <div class="row" style="text-align: center;">
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <span ng-bind="item.league.name" style="font-size: 1.2em;"></span>
+      </div>
+
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-class="{winner:item.match.home.goals >= item.match.away.goals}">
+        <span ng-bind="item.match.home.name" style="font-size: 1.4em;"></span>
+        <br />
+        <span ng-bind="item.match.home.goals" class="goal"></span>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-class="{winner:item.match.away.goals >= item.match.home.goals}">
+        <span ng-bind="item.match.away.name" style="font-size: 1.4em;"></span>
+        <br />
+        <span ng-bind="item.match.away.goals" class="goal"></span>
+      </div>
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <span class="status _{{item.match.status.id_status}}" ng-bind="item.match.status.name" style="font-size: 1.2em;"></span>
+      </div>
+    </div>
+  </div>
 </div>
