--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -1,9 +1,95 @@
-		
-		<div id="wrapper" >
-			<div class="scroller">
-				<div class="container">					
-					<!-- here code-->
-				</div>				
-			</div>
-		</div>
-	
+<div class="row">
+  <div id="wrapperH">
+    <div id="scroller" style="width:{{_this.widthTotal}}px;">
+      <ul>
+
+
+        <li style="width:{{_this.width}}px;" ng-repeat="league in _this.item.leagues" >
+          <div class="container">
+
+            <div class="row header">
+              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+                <h4 ng-bind="league.name" class="caption"></h4>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div id="{{_this.wrapper.getName($index)}}" class="wrapper" >
+                <div class="scroller" >
+                  <div class="container">
+
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="fixture in league.fixtures" >
+
+
+                      <table class="table" >
+
+                        <thead>
+                        <tr>
+                          <th colspan="3">
+                            <span ng-bind="fixture.date"></span>
+                          </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+
+                          <tr  ng-repeat="match in fixture.matches">
+                            <td style="width: 33% !important;" ng-class="{winner: match.home_team_goals >= match.away_team_goals}">
+                              <span ng-bind="match.homeTeam.name"></span>
+                              <br />
+                              <span ng-bind="match.home_team_goals" class="goal"></span>
+                            </td>
+
+                            <td style="width: 33% !important;">
+                              <span ng-bind="getTime(match.date)" class="date"></span>
+                              <br />
+                              <span ng-bind="match.status.name" class="status _{{match.status.id_status}}" ></span>
+                            </td>
+
+                            <td style="width: 33% !important;" ng-class="{winner: match.away_team_goals >= match.home_team_goals}">
+                              <span ng-bind="match.awayTeam.name"></span>
+                              <br />
+                              <span ng-bind="match.away_team_goals" class="goal"></span>
+                            </td>
+                          </tr>
+
+                        </tbody>
+                      </table>
+
+
+
+                    </div>
+
+                   <!--div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+                     <table class="table">
+                       <thead>
+                       <tr>
+                         <th style="text-align: left;">Nome do jogador</th>
+                         <th style="text-align: left;">Equipe</th>
+                         <th>Goles</th>
+                       </tr>
+                       </thead>
+                       <tbody>
+
+                       <tr ng-class="{'active' : $odd}" ng-repeat="scorer in league.scorers" >
+                         <td style="text-align: left;"><span ng-bind="scorer.name" style="vertical-align: middle;"></span></td>
+                         <td style="text-align: left;"><span ng-bind="scorer.team.name" style="vertical-align: middle;"></span></td>
+                         <td><span ng-bind="scorer.goals" style="vertical-align: middle;"></span></td>
+                       </tr>
+
+                       </tbody>
+                     </table>
+
+                   </div-->
+                  </div>	<!--container-->
+                </div>	<!--scroller-->
+              </div> <!--wrapper-->
+            </div> <!--row-->
+
+          </div> <!--container-->
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
