--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -39,10 +39,10 @@
         <div class="row-back border" ng-click="prevPage()">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <i class="icon icon-material-keyboard-arrow-left"
-                       style="font-size: 1.8em; margin-left: 10px;"></i>
+                    <i class="icon mdi-hardware-keyboard-arrow-left"
+                       style="font-size: 2em; margin-left: 10px; vertical-align: baseline;"></i>
                     <span ng-bind="_this.item.competition.name"
-                          style="font-size: 2em; margin-left: 10px; font-weight: bold;"></span>
+                          style="font-size: 2em; margin-left: 10px; font-weight: bold; vertical-align: baseline;"></span>
                 </div>
             </div>
         </div>
@@ -169,8 +169,8 @@
         <div class="row-back border" ng-click="prevPage()">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <i class="icon icon-material-keyboard-arrow-left"
-                       style="font-size: 1.8em; margin-left: 10px;"></i>
+                    <i class="icon mdi-hardware-keyboard-arrow-left"
+                       style="font-size: 2em; margin-left: 10px; vertical-align: baseline;"></i>
                     <span ng-bind="_this.item.phase.competition.name"
                           style="font-size: 2em; margin-left: 10px; font-weight: bold;"></span>
                 </div>
