--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -15,17 +15,8 @@
         </div>
     </div>
 
-    <div id="wrapper2" class="page" style="z-index: 2; left: 100%;" >
-        <div class="row-back" ng-click="prevPage()">
-            <div class="row" style="margin-top: 10px !important;">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
-                    <i class="icon mdi-hardware-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px;"></i>
-                </div>
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
-                    <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
-                </div>
-            </div>
-        </div>
+    <div id="wrapper2" class="page" style="left: 100%;" >
+
 
         <div class="scroller">
             <div class="container" >
@@ -39,5 +30,18 @@
                 </div>
             </div>
         </div>
+
+        <div class="row-back" ng-click="prevPage()">
+          <div class="row" style="margin-top: 10px !important;">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
+              <i class="icon mdi-navigation-arrow-back" style="font-size: 1.8em; margin-left: 10px;"></i>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
+              <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
+            </div>
+          </div>
+        </div>
+
+
     </div>
 </div>
