--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -429,7 +429,7 @@ body.content-mtm .row-back {
 	.status.PT { background-color:#3B9444; color: #ffffff; }
 	.status.ST { background-color:#FFBF00; color: #000000; }
 
-
+  .bet.active {background-color:#D84A38  !important;}
 
 /* From ext/bootstrap.css */
 .col-xs-15,
